tried to make it responsiv

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <div id="page-logo"><a href="index.html">Branch Bots</a></div>
     </header>
     <main>
-      <div>
-        <button id="sub-btn">submit</button>
+      <div id="sub-btn">
+        <button>submit</button>
       </div>
       <div id="contaier">
         <ul>
