--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500;700&display=swap"
       rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
+    <script src="app.js"></script>
   </head>
   <body>
     <header>
