chenged some content in the main part

--- a/index.html
+++ b/index.html
@@ -15,60 +15,62 @@
       <div id="page-logo"><a href="index.html">Branch Bots</a></div>
     </header>
     <main>
-      <div id="sub-btn">
+      <section>
+        <div id="contaier">
+          <ul>
+            <li class="item">
+              <img src="Images/Turkish-Coffee.jpg" alt="Turkish-Coffee" />
+              <div>
+                <h2>Turkish coffee</h2>
+              </div>
+              <div class="quantity-controls">
+                <button class="decrease" data-item="Turkish Coffee">-</button>
+                <input type="text" id="Turkish-Coffee-quantity" value="0" />
+                <button class="increase" data-item="Turkish-Coffee">+</button>
+              </div>
+            </li>
+
+            <li class="item">
+              <img src="Images/Americano.jpg" alt="Americano" />
+              <div>
+                <h2>Americano</h2>
+              </div>
+              <div class="quantity-controls">
+                <button class="decrease" data-item="Americano">-</button>
+                <input type="text" id="Americano-quantity" value="0" />
+                <button class="increase" data-item="Americano">+</button>
+              </div>
+            </li>
+
+            <li class="item">
+              <img src="Images/Tea.jpg" alt="Americano" />
+              <div>
+                <h2>Tea</h2>
+              </div>
+              <div class="quantity-controls">
+                <button class="decrease" data-item="Tea">-</button>
+                <input type="text" id="Tea-quantity" value="0" />
+                <button class="increase" data-item="Tea">+</button>
+              </div>
+            </li>
+
+            <li class="item">
+              <img src="Images/water.jpg" alt="Water" />
+              <div>
+                <h2>Water</h2>
+              </div>
+              <div class="quantity-controls">
+                <button class="decrease" data-item="Water">-</button>
+                <input type="text" id="Water-quantity" value="0" />
+                <button class="increase" data-item="Water">+</button>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section id="sub-btn">
         <button>submit</button>
-      </div>
-      <div id="contaier">
-        <ul>
-          <li class="item">
-            <img src="Images/Turkish-Coffee.jpg" alt="Turkish-Coffee" />
-            <div>
-              <h2>Turkish coffee</h2>
-            </div>
-            <div class="quantity-controls">
-              <button class="decrease" data-item="Turkish Coffee">-</button>
-              <input type="text" id="Turkish-Coffee-quantity" value="0" />
-              <button class="increase" data-item="Turkish-Coffee">+</button>
-            </div>
-          </li>
-
-          <li class="item">
-            <img src="Images/Americano.jpg" alt="Americano" />
-            <div>
-              <h2>Americano</h2>
-            </div>
-            <div class="quantity-controls">
-              <button class="decrease" data-item="Americano">-</button>
-              <input type="text" id="Americano-quantity" value="0" />
-              <button class="increase" data-item="Americano">+</button>
-            </div>
-          </li>
-
-          <li class="item">
-            <img src="Images/Tea.jpg" alt="Americano" />
-            <div>
-              <h2>Tea</h2>
-            </div>
-            <div class="quantity-controls">
-              <button class="decrease" data-item="Tea">-</button>
-              <input type="text" id="Tea-quantity" value="0" />
-              <button class="increase" data-item="Tea">+</button>
-            </div>
-          </li>
-
-          <li class="item">
-            <img src="Images/water.jpg" alt="Water" />
-            <div>
-              <h2>Water</h2>
-            </div>
-            <div class="quantity-controls">
-              <button class="decrease" data-item="Water">-</button>
-              <input type="text" id="Water-quantity" value="0" />
-              <button class="increase" data-item="Water">+</button>
-            </div>
-          </li>
-        </ul>
-      </div>
+      </section>
     </main>
     <footer></footer>
   </body>
