--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <h2>Turkish coffee</h2>
               </div>
               <div class="quantity-controls">
-                <button class="decrease" data-item="Turkish Coffee">-</button>
-                <input type="text" id="Turkish-Coffee-quantity" value="0" />
-                <button class="increase" data-item="Turkish-Coffee">+</button>
+                <button class="decrease" data-item="Turkish coffee">-</button>
+                <input type="text" id="Turkish-coffee-quantity" value="0" />
+                <button class="increase" data-item="Turkish coffee">+</button>
               </div>
             </li>
 
