added toaster to the submit button

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <button>submit</button>
       </section>
     </main>
-    <footer></footer>
+
+    <div id="toasterContainer"></div>
   </body>
 </html>
